# AndroidAgent

./: ._.venv  ._README.md  ._outputs  .gitignore  README.md  packaging_backend.py  pyproject.toml
.venv-ssp/: pyvenv.cfg
configs/: ._sunflower.yaml  agent.example.yaml  sunflower.yaml
configs/cases/: deep_link_open.yaml  list_item_click.yaml  login_dialog_check.yaml  permission_prompt.yaml  snackbar_check.yaml  sunflower_launch_check.yaml
docs/: ._SUNFLOWER_USAGE.md  SUNFLOWER_USAGE.md
scripts/: bootstrap_android_env.sh  collect_device_info.sh
src/android_agent/: .___pycache__  ._cli.py  ._config.py  ._utils.py  __init__.py  build_runner.py  cli.py  config.py  device_manager.py  doctor.py  evidence.py  models.py  reporter.py  run_pipeline.py  shell.py  utils.py
src/android_agent/executors/: .___pycache__  __init__.py  base.py  maestro.py  placeholders.py
templates/: report.md.j2
tests/: ._test_cli.py  ._test_config.py  test_build_runner.py  test_cli.py  test_config.py  test_device_manager.py  test_doctor.py  test_maestro_executor.py  test_reporter.py  test_shell.py
